Add threads button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <div>
                 <button onclick="getQuote(api_url)">Nova Frase</button>
                 <button onclick="tweet()"><img src="assets/icon/twitterx.png">Tweet</button>
+                <button onclick="thread()"><img src="assets/icon/threads.png">Thread</button>
             </div>
         </div>
     </div>  
